--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+.img-1{
+    width: 100%;
+    height: 100%;
+}
 
 .navbar{
     display: flex;
@@ -180,14 +184,25 @@ text-align: center;
 
     background: url(),rgb(217, 217, 217);
 }
+#time-1{
+    border-radius: 47.93px;
+background: rgb(60, 216, 232);
+color: rgb(255, 255, 255);
+width: 135px;
+position: absolute;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-left: 30px;
+    margin-top: -30px;
+}
+.just{
+    margin-top: 40px;
+}
 .part3-4-img{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
-    /* margin-right: 300px; */
-    /* width: 10px; */
-/* height: 6px; */
-
 }
 .section-for-part-3{
     display: flex;
@@ -197,16 +212,49 @@ text-align: center;
 
 background: rgb(255, 255, 255);
 }
+.time-2{
+    position: absolute;
+
+border-radius: 2rem;
+background: rgb(149, 178, 38);
+position: absolute;
+    text-align: center;
+    font-size: 12.34px;
+    /* font-weight: 400; */
+    margin-left: 2rem;
+    margin-top: -1.6rem;
+    color: rgb(255, 255, 255);
+}
+.time-3{
+    position: absolute;
+
+border-radius: 2rem;
+border-radius: 47.93px;
+background: rgb(93, 88, 240);
+position: absolute;
+    text-align: center;
+    font-size: 12.34px;
+    font-weight: 400;
+    margin-left: 1.4rem;
+    margin-top: -1.6rem;
+    color: rgb(255, 255, 255);
+}
 .section-for-part-3{
     background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+   
+/* width: 160px; */
+/* height: 630.52px; */
+
+/* margin: 80px 0px; */
 }
 .button-4{
     border-radius: 12px;
 background: rgb(17, 17, 17);
 color: rgb(255, 255, 255);
-width: 197px;
-height: 40px;
-text-align: center;
+margin-top: 50px;
+margin-bottom: 50px;
+margin-left: 400px;
+margin-right: 200px;
 }
 
 @media screen and (max-width: 576px){
@@ -216,7 +264,12 @@ text-align: center;
     .part3-4-img{
         
     }
-    
+    .button-4{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: 100px;
+        margin-right: 50%;
+}
 }
 .footer-div-1{
     /* margin-left: 10px; */
