--- a/style/style.css
+++ b/style/style.css
@@ -231,7 +231,7 @@ position: absolute;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 .img-11{
     border-radius: 16px 16px 0px 0px;
@@ -250,17 +250,9 @@ background: rgb(255, 255, 255);
 .section-for-part-3{
     background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
    
-    /* position: absolute; */
     width: auto;
-    /* height: 1018.02px; */
-    /* left: 0; */
     top: 1554px;
-    /* Auto layout */
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    gap: 80;
+    /* gap: 80; */
     padding: 60px 0px 60px 0px;
     margin-right: 30px;
 }
